Implemented fixes in google OAuth and migration cmd, removed user AvatarURL field
